# NTRU

./: CMakeLists.txt  NTRU.cpp  NTRU.h  README.md  main.cpp
src/: main.cpp
